<resources>
    <string name="app_name">BhavaniElectronics</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bhavani Engineering</string>
    <string name="nav_header_subtitle">Since 2008</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_about">About Us</string>
    <string name="menu_product">Products</string>
    <string name="menu_export">Exports</string>
    <string name="menu_inquiry">Inquiry</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_download">Downlaod</string>
    <string name="text1">Most advanced manufacturing process technology, precision machinery, most stringent quality control standards and passion for new developments with the Continuous Research and Development has taken the company to a new horizon.</string>
    <string name="text2">Our 70% market share in this industrial segment has made us “MARKET LEADER” amongst all other players in Domestic as well as overseas market.</string>
    <string name="text3">Our motto is “CUSTOMER DELIGHT”. Trust, you will our name and will give us chance to prove ourselves as your preferred suppliers to satisfy your all needs related to plastic processing machinery for your plant.</string>
    <string name="home_second">Home Second</string>
</resources>
