<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_perm_device_information_black_24dp"
            android:title="@string/menu_about"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_product" />
        <item
            android:id="@+id/nav_exports"
            android:icon="@drawable/ic_import_export_black_24dp"
            android:title="@string/menu_export"/>
        <item
            android:id="@+id/nav_inquiry"
            android:icon="@drawable/ic_question_answer_black_24dp"
            android:title="@string/menu_inquiry"/>
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contact_phone_black_24dp"
            android:title="@string/menu_contact"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_file_download_black_24dp"
            android:title="@string/menu_download" />
    </group>
</menu>
