<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:orientation="vertical">
    <ScrollView
        android:layout_marginTop="10dp"
        android:paddingHorizontal="5dp"
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/home"/>
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
                <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="15dp"
                 />
            </LinearLayout>
        <TextView
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/background"
            android:textAlignment="center"
            android:background="@android:color/darker_gray"
            android:text="WHY US"
            android:textSize="20dp"
            android:gravity="center_horizontal" />
        <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/why1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_thumb_up_black_24dp"
                android:paddingHorizontal="3dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="ZERO DEFECT"
                    android:textSize="17dp"
                    android:textColor="@color/navyblue" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text1"
                    android:paddingHorizontal="5dp"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/why2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/why1"
            android:paddingTop="10dp"
            android:paddingBottom="5dp">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_supervisor_account_black_24dp"
                android:paddingHorizontal="3dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="MARKET LEADER"
                    android:textSize="17dp"
                    android:textColor="@color/navyblue"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text2"
                    android:paddingHorizontal="5dp"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/why3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/why2"
            android:paddingTop="10dp">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_access_time_black_24dp"
                android:paddingHorizontal="3dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="CUSTOMER DELIGHT"
                    android:textSize="17dp"
                    android:textColor="@color/navyblue"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text3"
                    android:paddingHorizontal="5dp"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>